--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projet trois OpenClassRooms, sur ohmyfood",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "--watch sass style.scss style.css"
   },
   "repository": {
     "type": "git",
